--- a/task.html
+++ b/task.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>Quản lí công việc UWC 2.0</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="icon" href="src/assets/icon.png">
 
     <script src = "employee.js"></script>
