--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
   <head>
     <title>Tạo nhiệm vụ mới UWC 2.0</title>
     <link rel="icon" href="src/assets/icon.png">
-    
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src = "employee.js"></script>
     <script src = "vehicle.js"></script>
     <script src = "task.js"></script>
