--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <head>
     <title>UWC 2.0</title>
     <link rel="icon" href="src/assets/icon.png">
+   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     
     <link rel="stylesheet" type="text/css" href="style.css" />
