--- a/route.html
+++ b/route.html
@@ -8,7 +8,6 @@
   <head>
     <title>Tạo nhiệm vụ mới UWC 2.0</title>
     <link rel="icon" href="src/assets/icon.png">
-   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js" defer></script>
     <script src = "employee.js"></script>
     <script src = "vehicle.js"></script>
@@ -76,9 +75,116 @@
       </table>
     </form>
      
-    <div class="assign-plus">
+    <div  style="display:inline-block;" class="assign-plus">
         <iframe src="https://www.google.com/maps/embed?pb=!1m31!1m12!1m3!1d3918.2205096203866!2d106.79734841533453!3d10.870826010415458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m16!3e0!4m4!2s10.87034%2C%20106.80!3m2!1d10.870339999999999!2d106.8!4m4!2s10.868730931333815%2C%20106.7963905684442!3m2!1d10.8687309!2d106.7963906!4m4!2s10.872171119692526%2C%20106.80253353634058!3m2!1d10.8721711!2d106.8025335!5e0!3m2!1svi!2s!4v1667989903465!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>   
+      </div>   
+      <div style="width:600px; height:400px; overflow:auto; display:inline-block;"> 
+        <p>Hệ thống đề xuất tuyến đường tốt nhất:</p>
+        <table cellspacing="0" cellpadding="1" width="500">
+          <tr>
+            <th>Điểm bắt đầu:</th>
+            <td>Linh Trung, Phường Linh Trung, Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam</td>
+          </tr>
+          <tr>
+            <th>Điểm đến:</th>
+            <td>VRC2+RXV, Khu Phố 6, Thủ Đức, Thành phố Hồ Chí Minh, Việt Nam</td>
+          </tr>
+          <tr>
+            <th>qua Đường Hàn Thuyên: 6.6km</th>
+            <td>18 phút</td>
+          </tr>
+        </table>
+      </div>
+      <div style="width:600px; height:400px; overflow:auto; display:inline-block;">
+        <table cellspacing="0" cellpadding="1" width="500">
+          <tr>
+            <th>Bước</th>
+            <th>Hướng đi</th>
+            <th>Quãng đường</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Đi về hướng Nam về phía Đường Hàn Thuyêns</td>
+            <td>160m</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Tại Tiệm Photo, tiếp tục vào Đường Hàn Thuyên<br>
+         Đi qua Cơm tự chọn và trà tắc (ở phía bên phải)</td>
+            <td>500m</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Rẽ trái tại K-Coffee and Tea vào Đ. Quảng Trường Sáng Tạo<br>
+         Đi qua Lẩu cá 79 (ở phía bên phải)</td>
+            <td>120m</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Rẽ trái tại công viên vào Đ. Vào Đại Học Quốc Gia/Đường T2</td>
+            <td>18m</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Rẽ phải để vào Đ. Vào Đại Học Quốc Gia/Đường T2<br>
+         Đi qua Cơ Sở Y. Bình Mua Bán Xác Nhà Cũ (ở phía bên trái)</td>
+            <td>450m</td>
+          </tr>
+           <td>6</td>
+            <td>Rẽ trái tại Tiệm bánh SanSan | Bánh kem ngon Dĩ An | Bánh kem ngon Thủ Đức vào Alexandre de Rhodes/Đường Trục Chính 10<br>
+         Đi qua Shop thể thao bốn phương (ở phía bên trái)</td>
+            <td>76m</td>
+          </tr>
+           <td>7</td>
+            <td>Chếch sang phải tại Tiệm Sửa Xe Quang về hướng Đ. Võ Trường Toản</td>
+            <td>150m</td>
+          </tr>
+           <td>8</td>
+            <td>Tại Decal Đại Dương Dán Xe - Đtdđ - Laptop, tiếp tục vào Đ. Võ Trường Toản<br>
+         Đi qua Thư Viện Trung Tâm ĐHQG TPHCM (ở phía bên trái)</td>
+            <td>450m</td>
+          </tr>
+           <td>9</td>
+            <td>Rẽ trái tại Trung tâm sáng tạo - Innovation Center of Specialized Bicycle Components - Vietnam</td>
+            <td>450m</td>
+          </tr>
+           <td>10</td>
+            <td>Rẽ phải để vào Đ. Vào Đại Học Quốc Gia/Đường T2<br>
+         Đi qua Cơ Sở Y. Bình Mua Bán Xác Nhà Cũ (ở phía bên trái)</td>
+            <td>55m</td>
+          </tr>
+           <td>11</td>
+            <td>Rẽ trái</td>
+            <td>45m</td>
+          </tr>
+           <td>12</td>
+            <td>Rẽ phải</td>
+            <td>78m</td>
+          </tr>
+           <td>13</td>
+            <td>Từ Đường số 1, rẽ phải để đến Đ. Marie Curie</td>
+            <td>1.1km</td>
+          </tr>
+           <td>13</td>
+            <td>Rẽ phải vào Đ. Lê Quý Đôn</td>
+            <td>240m</td>
+          </tr>
+           <td>14</td>
+            <td>Tại vòng xuyến, đi theo lối ra thứ 2 vào Đ. Quảng Trường Sáng Tạo</td>
+            <td>450m</td>
+          </tr>
+          <tr>
+            <td>15</td>
+            <td>Tại vòng xuyến, đi theo lối ra thứ 1 và vào Đ. Quảng Trường Sáng Tạo</td>
+            <td>350m</td>
+          </tr>
+          <tr>
+            <td>16</td>
+            <td>Rẽ trái vào Đường Hàn Thuyên. Điểm đến sẽ ở bên phải</td>
+            <td>160m</td>
+          </tr>
+        </table>
+      </div> 
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPEGZZxCgOpHZw_oqAz3U0UkCM94QOZvk&callback=initMap&libraries=marker&v=beta"
       defer>
