--- a/task.html
+++ b/task.html
@@ -6,6 +6,7 @@
 -->
 <html>
   <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lí công việc UWC 2.0</title>
     <link rel="icon" href="src/assets/icon.png">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
