--- a/task.html
+++ b/task.html
@@ -69,6 +69,7 @@
     <script type="text/javascript">
       window.onload = function() { 
         var table = $('#table_id').DataTable({
+         responsive:true,
           ajax: {
             url: 'task.json',
             dataSrc: ''
